# bilateralinceptions

./: .gitmodules  CMakeLists.txt  README.md
caffe/cmake/: patch_caffe_with_bilateralinception.cmake
caffe/include/caffe/layers/: pixel_feature_layer.hpp
caffe/src/caffe/proto/: caffe.proto
caffe/src/caffe/test/: test_mat_mul_layer.cpp  test_pdist_layer.cpp  test_smear_layer.cpp  test_spixel_feature_layer.cpp
data/: reducedval.txt
models/: deeplab_coco_largefov_bi6_2_bi7_6_deploy.prototxt
scripts/: config.py  do_seg.py  do_segmentation.py  eval_seg.py  eval_segmentation.py  get_deeplab_model.sh  get_voc.sh
tools/: CMakeLists.txt  compute_superpixels.cpp
